Koinworks-Sesi-11/k8s/orchestrator-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: orchestrator
  template:
    metadata:
      labels:
        component: orchestrator
    spec:
      containers:
        - name: orchestrator
          image: airelljordan98/orchestrator:latest
