Koinworks-Sesi-11/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment
  template:
    metadata:
      labels:
        component: payment
    spec:
      containers:
        - name: payment
          image: airelljordan98/payment:latest
