Koinworks-Sesi-11/k8s/foods-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foods-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: foods
  template:
    metadata:
      labels:
        component: foods
    spec:
      containers:
        - name: foods
          image: airelljordan98/foods:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: foods-srv
spec:
  selector:
    component: foods
  ports:
    - port: 8081
      targetPort: 8081
