Koinworks-Sesi-11/k8s/kafka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kafka
  template:
    metadata:
      labels:
        component: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-srv
spec:
  selector:
    component: kafka
  ports:
    - port: 9092
      targetPort: 9092
