Koinworks-Sesi-11/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: orders
  template:
    metadata:
      labels:
        component: orders
    spec:
      containers:
        - name: orders
          image: airelljordan98/orders:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    component: orders
  ports:
    - port: 8082
      targetPort: 8082
