Koinworks-Sesi-11/k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: users
  template:
    metadata:
      labels:
        component: users
    spec:
      containers:
        - name: users
          image: airelljordan98/users:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    component: users
  ports:
    - port: 8080
      targetPort: 8080
