Koinworks-Sesi-11/k8s/users-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: users-postgres
  template:
    metadata:
      labels:
        component: users-postgres
    spec:
      volumes:
        - name: users-postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: users-postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: users-postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: users-postgres-srv
spec:
  type: ClusterIP
  selector:
    component: users-postgres
  ports:
    - port: 5432
      targetPort: 5432
