Koinworks-Sesi-11/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: foodies.dev
      http:
        paths:
          - path: /users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-srv
                port:
                  number: 8080
          - path: /foods/?(.*)
            pathType: Prefix
            backend:
              service:
                name: foods-srv
                port:
                  number: 8081
          - path: /orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 8082
